--- a/example_run/config.yml
+++ b/example_run/config.yml
@@ -16,3 +16,11 @@ model_temp: 42
 
 # number of threads for bowtie2 to use
 bowtie2_threads: 4
+
+
+# NUPACK 4 model specification https://piercelab-caltech.github.io/nupack-docs/model/#model-specification
+nupack_material: 'dna'
+nupack_ensemble: 'stacking'
+nupack_celsius: 74.5
+nupack_sodium: 0.39
+nupack_magnesium: 0.0
