--- a/workflow/envs/environment.yml
+++ b/workflow/envs/environment.yml
@@ -8,6 +8,7 @@ dependencies:
   - bedtools=2.29.2
   - biopython=1.77
   - bowtie2=2.3.5.1
+  - tbb=2020.2 # TEMP workaround for bowtie2, tbb=2021.2 broken as of 5/19/2021
   - jellyfish=2.2.10
   - numpy=1.18.5
   - nupack=4.0.0.23
