--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -287,7 +287,7 @@ rule filter_n_probes:
         mfree='12G',
         h_rt='3:0:0'
     shell:
-        "awk '$4 !~ /N/' {input} > {output}"
+        "awk '$4 !~ /N/ && $4 !~ /-/' {input} > {output}"
 
 
 # determine max kmer frequency using jellyfish
