--- a/example_run/config.yml
+++ b/example_run/config.yml
@@ -22,6 +22,8 @@ annotation_file: 'data/example.gtf'
 # blockparse params (initial probe candidate mining)
 # blockparse_min_length: 30
 # blockparse_max_length: 37
+# blockparse_min_tm: 42
+# blockparse_max_tm: 47
 
 # number of threads for bowtie2 to use
 # bowtie2_threads: 4
