--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -162,8 +162,10 @@ rule design_probes:
         basename='pipeline_output/02_intermediate_files/02_init_probes/{chrom}',
         min_length=config.get('blockparse_min_length', 30),
         max_length=config.get('blockparse_max_length', 37),
+        min_tm=config.get('blockparse_min_tm', 42),
+        max_tm=config.get('blockparse_max_tm', 47)
     shell:
-        'python {workflow.basedir}/scripts/blockParse_unmasked.py -l {params.min_length} -L {params.max_length} -f {input[0]} -o {params.basename}'
+        'python {workflow.basedir}/scripts/blockParse_unmasked.py -l {params.min_length} -L {params.max_length} -t {params.min_tm} -T {params.max_tm} -f {input[0]} -o {params.basename}'
 
 # optional: if the user provided probes, skip probe mining and format those as fastq files
 rule format_existing_probes:
