--- a/environment.yml
+++ b/environment.yml
@@ -4,10 +4,163 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - biopython=1.77
-  - gffread=0.12.1
-  - pandas=1.1.0
+  - _libgcc_mutex=0.1
+  - aioeasywebdav=2.4.0
+  - aiohttp=3.6.2
+  - appdirs=1.4.3
+  - async-timeout=3.0.1
+  - attrs=19.3.0
+  - bcrypt=3.1.7
+  - boto3=1.14.20
+  - botocore=1.17.20
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - ca-certificates=2020.6.20
+  - cachetools=4.1.1
+  - cairo=1.16.0
+  - certifi=2020.6.20
+  - cffi=1.14.0
+  - chardet=3.0.4
+  - configargparse=1.2.3
+  - crc32c=2.0
+  - cryptography=2.9.2
+  - datrie=0.8.2
+  - decorator=4.4.2
+  - docutils=0.15.2
+  - dropbox=10.1.1
+  - expat=2.2.9
+  - fftw=3.3.8
+  - filechunkio=1.8
+  - fontconfig=2.13.1
+  - freetype=2.10.2
+  - ftputil=4.0.0
+  - gdk-pixbuf=2.36.12
+  - gettext=0.19.8.1
+  - ghostscript=9.18
+  - giflib=5.1.7
+  - gitdb=4.0.5
+  - gitpython=3.1.3
+  - glib=2.65.0
+  - gobject-introspection=1.64.1
+  - google-api-core=1.17.0
+  - google-api-python-client=1.9.1
+  - google-auth=1.19.0
+  - google-auth-httplib2=0.0.3
+  - google-cloud-core=1.3.0
+  - google-cloud-storage=1.28.1
+  - google-resumable-media=0.5.1
+  - googleapis-common-protos=1.51.0
+  - graphite2=1.3.13
+  - graphviz=2.38.0
+  - harfbuzz=2.4.0
+  - httplib2=0.18.1
+  - icu=67.1
+  - idna=2.10
+  - imagemagick=7.0.8_54
+  - importlib-metadata=1.7.0
+  - importlib_metadata=1.7.0
+  - ipython_genutils=0.2.0
+  - jbig=2.1
+  - jinja2=2.11.2
+  - jmespath=0.10.0
+  - jpeg=9d
+  - jsonschema=3.2.0
+  - jupyter_core=4.6.3
+  - ld_impl_linux-64=2.34
+  - libblas=3.8.0
+  - libcblas=3.8.0
+  - libcroco=0.6.13
+  - libffi=3.2.1
+  - libiconv=1.15
+  - liblapack=3.8.0
+  - libopenblas=0.3.10
+  - libpng=1.6.37
+  - libprotobuf=3.12.3
+  - librsvg=2.44.14
+  - libtiff=4.1.0
+  - libtool=2.4.6
+  - libuuid=2.32.1
+  - libwebp=1.0.2
+  - libxcb=1.13
+  - libxml2=2.9.10
+  - llvm-openmp=10.0.0
+  - lz4-c=1.9.2
+  - markupsafe=1.1.1
+  - mpi=1.0
+  - mpich=3.3.2
+  - multidict=4.7.5
+  - nbformat=5.0.7
+  - ncurses=6.1
+  - networkx=2.4
+  - numpy=1.18.5
+  - oauth2client=4.1.3
+  - openjpeg=2.3.1
+  - openssl=1.1.1g
+  - pandas=1.0.5
+  - pango=1.40.14
+  - paramiko=2.7.1
+  - pcre=8.44
+  - perl=5.26.2
   - pip=20.1.1
+  - pixman=0.38.0
+  - pkg-config=0.29.2
+  - prettytable=0.7.2
+  - protobuf=3.12.3
+  - psutil=5.7.0
+  - pthread-stubs=0.4
+  - pyasn1=0.4.8
+  - pyasn1-modules=0.2.7
+  - pycparser=2.20
+  - pygments=2.6.1
+  - pygraphviz=1.5
+  - pynacl=1.3.0
+  - pyopenssl=19.1.0
+  - pyrsistent=0.16.0
+  - pysftp=0.2.9
+  - pysocks=1.7.1
   - python=3.8.3
+  - python-dateutil=2.8.1
+  - python-irodsclient=0.8.2
+  - python_abi=3.8
+  - pytz=2020.1
+  - pyyaml=5.3.1
+  - ratelimiter=1.2.0
+  - readline=8.0
+  - requests=2.24.0
+  - rsa=4.6
+  - s3transfer=0.3.3
+  - setuptools=49.2.0
+  - simplejson=3.17.0
+  - six=1.15.0
+  - slacker=0.14.0
+  - smmap=3.0.4
   - snakemake=5.20.1
-  
+  - snakemake-minimal=5.20.1
+  - sqlite=3.32.3
+  - tk=8.6.10
+  - toposort=1.5
+  - traitlets=4.3.3
+  - uritemplate=3.0.1
+  - urllib3=1.25.9
+  - wheel=0.34.2
+  - wrapt=1.12.1
+  - xmlrunner=1.7.7
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.6.9
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxpm=3.5.13
+  - xorg-libxrender=0.9.10
+  - xorg-libxt=1.1.5
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.2.5
+  - yaml=0.2.5
+  - yarl=1.4.2
+  - zipp=3.1.0
+  - zlib=1.2.11
+  - zstd=1.4.4
